@@ -24,6 +24,7 @@
 */
 $gap: 16px;
 $gap-small: 12px;
+$gap-smaller: 8px;
 .woocommerce-report-table {
 	.woocommerce-search {
 		flex-grow: 1;
@@ -33,6 +34,7 @@ $gap-small: 12px;
 		position: relative;
 	}
 
+	&.has-compare,
 	&.has-search {
 		.woocommerce-card__action {
 			align-items: center;
@@ -60,6 +62,13 @@ $gap-small: 12px;
 					grid-area: 2 / 2 / 3 / 4;
 					margin-right: 0;
 				}
+
+				.woocommerce-table__download-button {
+					grid-area: 1 / 2 / 2 / 3;
+					justify-self: end;
+					margin: -6px 0;
+					position: absolute;
+				}
 			}
 		}
 
@@ -72,6 +81,12 @@ $gap-small: 12px;
 					grid-column-start: 1;
 					grid-column-end: 2;
 				}
+
+				.woocommerce-table__download-button {
+					align-self: center;
+					grid-column-start: 2;
+					grid-column-end: 3;
+				}
 			}
 
 			@include breakpoint( '<960px' ) {
@@ -81,6 +96,10 @@ $gap-small: 12px;
 					.woocommerce-search {
 						grid-area: 2 / 1 / 3 / 4;
 						margin-left: 0;
+					}
+
+					.woocommerce-table__download-button {
+						grid-area: 1 / 2 / 2 / 3;
 					}
 				}
 			}
@@ -92,6 +111,34 @@ $gap-small: 12px;
 			.woocommerce-select-control__control {
 				height: 38px;
 			}
+		}
+
+		.woocommerce-compare-button {
+			padding: 3px $gap-small;
+			height: auto;
+		}
+	}
+}
+
+button.woocommerce-table__download-button {
+	padding: 6px $gap-small;
+	color: $studio-black;
+	text-decoration: none;
+	align-items: center;
+
+	svg {
+		margin-right: $gap-smaller;
+		height: 24px;
+		width: 24px;
+	}
+
+	@include breakpoint( '<960px' ) {
+		svg {
+			margin-right: 0;
+		}
+
+		.woocommerce-table__download-button__label {
+			display: none;
 		}
 	}
 }
