@@ -103,6 +103,7 @@ Please note that our support for the checkout block is still experimental and th
 
 = 2.3.0 - 2021-xx-xx =
 * Add - Introduced deposit currency filter for transactions overview page.
+* Add - Download transactions report in CSV.
 
 = 2.2.0 - 2021-03-31 =
 * Fix - Paying with a saved card for a subscription with a free trial will now correctly save the chosen payment method to the order for future renewals.
